--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,26 @@
 {
   "name": "Program Architect",
   "short_name": "ProgArch",
+  "description": "A specialized digital coaching tool for powerlifters featuring non-linear wave loading.",
   "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#111827",
   "theme_color": "#111827",
   "orientation": "portrait",
+  "lang": "en",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/2548/2548523.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "https://cdn-icons-png.flaticon.com/512/2548/2548523.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
