--- a/manifest.json
+++ b/manifest.json
@@ -12,13 +12,13 @@
   "lang": "en",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/128/2548/2548523.png",
-      "sizes": "128x128",
+      "src": "./icon.png",
+      "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2548/2548523.png",
+      "src": "./icon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
