feat: Update PWA manifest and cache for versioning
Updates the PWA manifest with a new ID and modifies the `start_url`. Also, increments the cache name in the service worker to ensure a fresh cache load for new versions.

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "Program Architect",
   "short_name": "ProgArch",
   "description": "A specialized digital coaching tool for powerlifters featuring non-linear wave loading.",
-  "id": "./",
-  "start_url": "./index.html",
+  "id": "program-architect-v1",
+  "start_url": "./",
   "scope": "./",
   "display": "standalone",
   "background_color": "#111827",
