--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Program Architect",
   "short_name": "ProgArch",
   "description": "A specialized digital coaching tool for powerlifters featuring non-linear wave loading.",
-  "id": "program-architect-v1",
+  "id": "program-architect-v1.1",
   "start_url": "./",
   "scope": "./",
   "display": "standalone",
@@ -28,14 +28,14 @@
     {
       "src": "https://images.unsplash.com/photo-1517836357463-d25dfeac3438?auto=format&fit=crop&w=1080&h=1920&q=80",
       "sizes": "1080x1920",
-      "type": "image/jpg",
+      "type": "image/jpeg",
       "form_factor": "narrow",
       "label": "Program View"
     },
     {
       "src": "https://images.unsplash.com/photo-1534438327276-14e5300c3a48?auto=format&fit=crop&w=1080&h=1920&q=80",
       "sizes": "1080x1920",
-      "type": "image/jpg",
+      "type": "image/jpeg",
       "form_factor": "narrow",
       "label": "Analytics View"
     }
