feat: Enhance PWA manifest and service worker
Updates the PWA manifest and service worker to use root paths for assets and resources.
Implements network-first strategy for critical assets in the service worker to ensure the latest versions are fetched.
Adds service worker update detection and logging in the main HTML.
Updates cache names for proper versioning.

--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
   "name": "Program Architect",
   "short_name": "ProgArch",
   "description": "A specialized digital coaching tool for powerlifters featuring non-linear wave loading.",
-  "id": "program-architect-v1.3",
-  "start_url": "./",
-  "scope": "./",
+  "id": "program-architect-v1.4",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#111827",
   "theme_color": "#111827",
